--- a/Actividad1/app/src/main/res/values/strings.xml
+++ b/Actividad1/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PrimerProyecto</string>
+    <string name="String_tvRL">Texto dentro de relative Layout</string>
+    <string name="String_hint_etRL">Ingresa tu texto</string>
+    <string name="String_btnRL">Enviar</string>
+    <bool name="strue">true</bool>
+
+
 </resources>
