--- a/Actividad1/app/src/main/res/values/strings.xml
+++ b/Actividad1/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="rb_masculino">Masculino</string>
     <string name="rb_femenino">Femenino</string>
     <bool name="strue">true</bool>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="first_fragment">First Fragment</string>
+    <string name="second_fragment">Second Fragment</string>
 
 
 </resources>
